--- a/css/user_avatar.css
+++ b/css/user_avatar.css
@@ -22,7 +22,7 @@ body{
   .cropper-box {
     width: 350px;
     height: 350px;
-    background-color: cyan;
+    background-color: gray;
     overflow: hidden;
   }
   
